# rag-pdf-mcq-quiz

./: .gitignore  README.md  main.py  pyproject.toml  server.py  validator_script.py
data/5_estate_planning/Lessons/: 1. Chapter 1  The Concepts and Fundamentals of Estate Planning.json  1. Chapter 1  The Concepts and Fundamentals of Estate Planning.md  1. Chapter 1  The Concepts and Fundamentals of Estate Planning.pdf.json  2. Chapter 2  Testacy and Intestacy.json  2. Chapter 2  Testacy and Intestacy.md  3. Chapter 3  Estate of Muslims.json  3. Chapter 3  Estate of Muslims.md  4. Chapter 4  Trusts.json  4. Chapter 4  Trusts.md  5. Chapter 5  Powers of Attorney.json  5. Chapter 5  Powers of Attorney.md  6. Chapter 6  Personal Representatives Duties and Powers.json  6. Chapter 6  Personal Representatives Duties and Powers.md  7. Chapter 7  Life Insurance and Estate Planning.json  7. Chapter 7  Life Insurance and Estate Planning.md  8. Chapter 8  Estate Planning for Business Owners.json  8. Chapter 8  Estate Planning for Business Owners.md  Estate Planning-13-15.json  Estate Planning-13-15.md
data/processed/: 5_estate_planning_questions.json
rag_backend/: config.py  data_processing.py  rag_chain.py  retriever.py  vector_store_manager.py
